Starting the process of unsing the Information library I've been creating for this and other projects. It's a bit of a mess, but I guess that's how I'm gonna learn!

--- a/PED/PED.csproj
+++ b/PED/PED.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Information">
+      <HintPath>..\..\..\Information\Information\bin\Debug\Information.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
